manifests/odoo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: odoo
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: cnpg.io/cluster
                    operator: Exists
                  - key: role
                    operator: In
                    values:
                      - primary
              topologyKey: topology.kubernetes.io/region
      containers:
        - name: odoo
          image: yusuke1998/kubernetes-odoo:16.1.8
          imagePullPolicy: Always
          command:
            - bash
          args:
            - -lc
            - |
              # Activamos server_environment en odoo.conf
              echo "server_environment = fsprod" >> /etc/odoo/odoo.conf
              exec odoo -c /etc/odoo/odoo.conf
          envFrom: *envFrom
          resources:
            limits:
              cpu: "500m"
              memory: 512Mi
            requests:
              cpu: "250m"
              memory: 256Mi
          ports:
            - containerPort: 8069
              name: web
            - containerPort: 8072
              name: websocket
          readinessProbe:
            httpGet:
              path: /web/health
              port: 8069
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
          volumeMounts: &volumeMounts
            - name: odoo-unified-secret
              mountPath: /etc/odoo/odoo.conf
              subPath: odoo.conf
              readOnly: true
            - name: odoo-unified-config
              mountPath: /etc/odoo/fsprod.ini
              subPath: fsprod.ini
              readOnly: true
            - name: odoo-unified-secret
              mountPath: /etc/odoo/fsprod_secret.ini
              subPath: fsprod_secret.ini
              readOnly: true
      volumes:
        - name: odoo-unified-secret
          secret:
            secretName: odoo-unified-secret
            items:
              - key: odoo.conf
                path: odoo.conf
              - key: fsprod_secret.ini
                path: fsprod_secret.ini
        - name: odoo-unified-config
          configMap:
            name: odoo-unified-config
            items:
              - key: fsprod.ini
                path: fsprod.ini
