manifests/odoo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: odoo
  namespace: odoo
spec:
  ports:
    - name: web
      port: 8069
      protocol: TCP
      targetPort: 8069
    - name: websocket
      port: 8072
      protocol: TCP
      targetPort: 8072
  selector:
    app: odoo
  type: ClusterIP
